# PokeChaton

./: CMakeLists.txt  LICENSE  README.md  main.cpp
components/: AAttack.hpp  Attack.cpp  Attacks.hpp  CSVReader.cpp  CSVReader.h  Gender.cpp  Interface.cpp  Pokemon.cpp  Trainer.cpp  Type.cpp
components/Interface/: Interface.cpp  Interface.h
components/Interface/prints/: mainMenu.txt
components/Poke/: PokeChat.cpp  Pokemon.cpp  Speace.cpp  Species.cpp
components/Question/: Question.cpp  Question.h  Questions.csv  Questions.txt
components/db/: CSVRecord.h  CSVTraitement.cpp  CSVTraitement.h  FirstGenPokemon.csv  Nouveau document texte.txt  TypeRelation.csv
header/: Attack.h  Gender.h  Interface.h  Pokemon.h  Trainer.h  Type.h  main.h
header/Poke/: PokeChat.h  Pokemon.h  Speace.h  Species.h
